# pyhexwatershed_icom

./: .gitignore  CMakeLists.txt  README.md
codes/arctic/: clip_delta.py
codes/greenland/: clip_greenland.py
data/amazon/input/: mesh_boundary_buffer.geojson  pyflowline_amazon_basins.json  pyhexwatershed_amazon_mpas.json
data/antarctic/input/: pyhexwatershed_antarctic_mpas.json
data/arctic/input/: pyhexwatershed_arctic_mpas.json  pyhexwatershed_arctic_mpas_icom.json  pyhexwatershed_arctic_mpas_icom2.json
data/columbia/input/: pyhexwatershed_columbia_mpas.json
data/icom/input/: pyflowline_icom_basins.json  pyflowline_icom_basins_dam.json  pyhexwatershed_icom_mpas.json  pyhexwatershed_icom_mpas_dam.json
data/petermann/input/: pyhexwatershed_petermann_mpas.json
data/sag/: hexwatershed.json
data/sag/input/: pyhexwatershed_sag_basins.json  pyhexwatershed_sag_mpas.json  (+2 more)
example/susquehanna/: example_susquehanna.py  pyflowline_susquehanna_basins.json  pyhexwatershed_susquehanna_hexagon.json  pyhexwatershed_susquehanna_latlon.json  pyhexwatershed_susquehanna_square.json  run_susquehanna.py
examples/: wms.py
examples/amazon/: pyflowline_amazon_basins.json  pyhexwatershed_amazon_mpas.json  run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/antarctic/: run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/arctic/: run_simulation_mpas.py
examples/columbia/: pyflowline_columbia_basins.json  pyhexwatershed_columbia_mpas.json  run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/greatlakes/: run_as_a_hpc_job.py
examples/icom/: pyhexwatershed_icom_mpas_dam.json  run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/k34/: run_as_a_hpc_job.py
examples/petermann/: run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/sag/: pyhexwatershed_sag_mpas.json  run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/susquehanna/: pyflowline_susquehanna_basins.json  pyflowline_susquehanna_basins_dam.json  pyhexwatershed_susquehanna_hexagon.json  pyhexwatershed_susquehanna_latlon.json  pyhexwatershed_susquehanna_mpas.json  pyhexwatershed_susquehanna_mpas_dam.json  pyhexwatershed_susquehanna_square.json  run_simulation_hexagon.py  run_simulation_latlon.py  run_simulation_mpas.py  run_simulation_mpas_dam.py  run_simulation_square.py
examples/wilkins/: run_as_a_hpc_job.py  run_as_a_local_simulation.py
examples/yangtze/: run_as_a_hpc_job.py  run_as_a_local_simulation.py
src/: conversion.cpp  conversion.h  data.cpp  data.h  domain.cpp  domain.h  edge.cpp  edge.h  hexagon.h  system.h  vertex.cpp  vertex.h
(+10 files in other folders)
